syntax = "proto2";

package tt;

message GetRequest {
    optional bytes type = 1;
    optional bytes keys = 2;
}

message GetReply {
    optional bytes type = 1;
    optional bytes keys = 2;
    optional uint32 retcode = 3;
    optional bytes value = 4;
}